--- a/views/homepage/index.handlebars
+++ b/views/homepage/index.handlebars
@@ -1,10 +1,11 @@
 <div class="container">
-  <div class="row">
+  <div class="row text-center">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-     
+      <div id = "output"></div>
+      <br>
       <div id = "drum"></div> 
-      <div id = "dial"></div>
-      <div id = "number"></div>
+	      
+     
     </div>
   </div>
 </div>
