--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -33,43 +33,7 @@
   <br><br><br>
   {{{ body }}}
 
-  <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-          <ul class="list-inline text-center">
-            <li>
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-          </ul>
-          <p class="copyright text-muted">Copyright &copy; Musician App 2017</p>
-        </div>
-      </div>
-    </div>
-
-
-  </footer>
+ 
   <script src="/vendor/nexus/NexusUI.js"></script>
   <script src="/vendor/jquery/jquery.min.js"></script>
   <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
@@ -79,41 +43,25 @@
   
 
   <script>
+        Nexus.context = Tone.context
         var sequencer = new Nexus.Sequencer('#drum',{
        'size': [400,200],
        'mode': 'toggle',
        'rows': 5,
        'columns': 10
-      })
-        var dial = new Nexus.Dial('#dial',{
-          'size': [75,75],
-          'interaction': 'radial', // "radial", "vertical", or "horizontal"
-          'mode': 'relative', // "absolute" or "relative"
-          'min': 0,
-          'max': 200,
-          'step': 10,
-          'value': 60
         })
+        sequencer.colorize("accent", "black");
         
-        var number = new Nexus.Number('#number',{
-          'size': [60,30],
-          'value': 0,
-          'min': 0,
-          'max': 200,
-          'step': 10
-        })
-        
-        
-        var hihat = new Tone.Player("/vendor/Samples/hat.wav").toMaster();
-        var kick = new Tone.Player("/vendor/Samples/kick.wav").toMaster();
-        var kicker = new Tone.Player("/vendor/Samples/kicker.wav").toMaster();
-        var snare = new Tone.Player("/vendor/Samples/snare.wav").toMaster();
-        var sistersnare = new Tone.Player("/vendor/Samples/sistersnare.wav").toMaster();
+        var hihat = new Tone.Player({"url" : "/vendor/Samples/hat.wav", "fadeOut" : 0.2}).toMaster();
+        var kick = new Tone.Player({"url" : "/vendor/Samples/kick.wav", "fadeOut" : 0.2}).toMaster();
+        var kicker = new Tone.Player({"url" : "/vendor/Samples/kicker.wav", "fadeOut" : 0.2}).toMaster();
+        var snare = new Tone.Player({"url" : "/vendor/Samples/snare.wav", "fadeOut" : 0.2}).toMaster();
+        var sistersnare = new Tone.Player({"url" : "/vendor/Samples/sistersnare.wav", "fadeOut" : 0.2}).toMaster();
         
 
-        number.link(dial)
+        
         sequencer.start();
-        console.log(number.value * 100);
+        //console.log(number.value * 100);
         sequencer.on('step',function(v) {
           console.log(v);
           if (v[0] == 1)
@@ -137,8 +85,16 @@
             sistersnare.start();
           }
         })
+        
+       
 
+        var oscilloscope = new Nexus.Oscilloscope('#output')
+         // or another audio context you have created
+        
+        oscilloscope.colorize("accent", "black");
 
+        oscilloscope.connect( Tone.Master );
+        
   </script>
 
 
