socket io implementation

--- a/views/homepage/index.handlebars
+++ b/views/homepage/index.handlebars
@@ -3,8 +3,11 @@
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
       <div id = "output"></div>
       <br>
+      <h2>User 1</h2>
       <div id = "drum"></div> 
-	      
+      <br>
+      <h2>User 2</h2>
+	  <div id = "drum2"></div>    
      
     </div>
   </div>
