--- a/views/homepage/index.handlebars
+++ b/views/homepage/index.handlebars
@@ -3,12 +3,12 @@
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
       <div id = "output"></div>
       <br>
-      <h2>User 1</h2>
-      <div id = "drum"></div> 
+      <h2>synth</h2>
+      <div id = "synth"></div>
       <br>
-      <h2>User 2</h2>
-	  <div id = "drum2"></div>    
-     
+      <h2>drums</h2>
+	  <div id = "drums"></div>    
+
     </div>
   </div>
 </div>
