Added Start/Stop Button

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -38,7 +38,10 @@
   <script src="/vendor/ToneJS/Tone.min.js"></script>
   <script src="/socket.io/socket.io.js"></script>
 
+  <script type="text/javascript" src="/globalControls.js"></script>
   <script type="text/javascript" src="/drumMachine.js"></script>
+  <script type="text/javascript" src="/synth.js"></script>
+
 
 
 </body>
