--- a/views/homepage/index.handlebars
+++ b/views/homepage/index.handlebars
@@ -6,8 +6,9 @@
       <h2>synth</h2>
       <div id = "synth"></div>
       <br>
+      <button id = "start_stop_btn" type = "button" class = "btn btn-success">Start/Stop</button>
       <h2>drums</h2>
-	  <div id = "drums"></div>    
+	  <div id = "drums"></div>
 
     </div>
   </div>
