--- a/views/homepage/index.handlebars
+++ b/views/homepage/index.handlebars
@@ -1,15 +1,20 @@
 <div class="container">
   <div class="row text-center">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-      <div id = "output"></div>
+      <span id = "output"></span>
+      <span>
+      <button id = "start_stop_btn" type = "button" class = "btn btn-success">Start/Stop</button>
+      </span>
       <br>
-      <h2>synth</h2>
+      <div id = "slider">
+        <div id = "tempodisplay"></div>
+      </div>
+      <br>
+      <h2>Synth</h2>
       <div id = "synth"></div>
       <br>
-      <button id = "start_stop_btn" type = "button" class = "btn btn-success">Start/Stop</button>
-      <h2>drums</h2>
+      <h2>Drums</h2>
 	  <div id = "drums"></div>
-
     </div>
   </div>
 </div>
