fixes for new tempo and start/stop

--- a/views/homepage/index.handlebars
+++ b/views/homepage/index.handlebars
@@ -1,10 +1,8 @@
 <div class="container">
-  <div class="row text-center">
+  <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
       <span id = "output"></span>
-      <span>
-      <button id = "start_stop_btn" type = "button" class = "btn btn-success">Start/Stop</button>
-      </span>
+      <!-- <button id = "start_stop_btn" type = "button" class = "btn btn-success">Start/Stop</button> -->
       <br>
       <div id = "slider">
         <div id = "tempodisplay"></div>
@@ -14,7 +12,9 @@
       <div id = "synth"></div>
       <br>
       <h2>Drums</h2>
-	  <div id = "drums"></div>
+	    <div id = "drums"></div>
+      <br>
+      <div id = "button"></div>
     </div>
   </div>
 </div>
