Added routes and views for signup and login

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,9 +22,8 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a href="/">Home</a></li>
           <li><a href="/users">Users</a></li>
-          <li><a href="/posts">Beats</a></li>
-            <li><a href="/login">Login</a></li>
-            <li><a href="/sign-up">Sign Up</a></li>
+          <li><a href="/login">Login</a></li>
+          <li><a href="/signup">Sign Up</a></li>
         </ul>
       </div>
     </div>
