user can register with form

--- a/views/homepage/index.handlebars
+++ b/views/homepage/index.handlebars
@@ -13,7 +13,7 @@
           <h4 class="modal-title">Sign Up</h4>
         </div>
         <div class="modal-body">
-          <form name="home" action="" method="post">
+          <form action="/" method="post">
             <div class="control-group row">
               <label>Username</label>
               <div class="col-10">
@@ -27,10 +27,11 @@
                 <input type="password" class="form-control" placeholder="Password" name="password" required data-validation-required-message="Please enter your password.">
               </div>
             </div>
+            <button type="submit" class="btn btn-default">Submit</button>
           </form>
         </div>
         <div class="modal-footer">
-          <button type="submit" class="btn btn-default">Send</button>
+
         </div>
       </div>
 
