move signup functionality to users.js

--- a/views/homepage/index.handlebars
+++ b/views/homepage/index.handlebars
@@ -13,7 +13,7 @@
           <h4 class="modal-title">Sign Up</h4>
         </div>
         <div class="modal-body">
-          <form action="/" method="post">
+          <form action="/users" method="post">
             <div class="control-group row">
               <label>Username</label>
               <div class="col-10">
