can add user with postman

--- a/views/signup/index.handlebars
+++ b/views/signup/index.handlebars
@@ -15,8 +15,8 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-      <form name="signup" action="/signup" method="post">
-        <div class="row control-group">
+      <form action="/users" method="post">
+        <!-- <div class="row control-group">
           <div class="form-group col-xs-12 floating-label-form-group controls">
             <label>First Name</label>
             <input type="text" class="form-control" placeholder="First Name" name="firstName" required data-validation-required-message="Please enter your first name.">
@@ -29,7 +29,7 @@
             <input type="text" class="form-control" placeholder="Last Name" name="lastName" required data-validation-required-message="Please enter your first name.">
             <p class="help-block text-danger"></p>
           </div>
-        </div>
+        </div> -->
         <div class="row control-group">
           <div class="form-group col-xs-12 floating-label-form-group controls">
             <label>Username</label>
@@ -37,13 +37,13 @@
             <p class="help-block text-danger"></p>
           </div>
         </div>
-        <div class="row control-group">
+        <!-- <div class="row control-group">
           <div class="form-group col-xs-12 floating-label-form-group controls">
             <label>Email Address</label>
             <input type="email" class="form-control" placeholder="Email Address" name="email" required data-validation-required-message="Please enter your email address.">
             <p class="help-block text-danger"></p>
           </div>
-        </div>
+        </div> -->
         <div class="row control-group">
           <div class="form-group col-xs-12 floating-label-form-group controls">
             <label>Password</label>
