user can login in with login page

--- a/views/login/index.handlebars
+++ b/views/login/index.handlebars
@@ -20,8 +20,8 @@
       <form name="login" action="/login" method="post">
         <div class="row control-group">
           <div class="form-group col-xs-12 floating-label-form-group controls">
-            <label>Email Address</label>
-            <input type="email" class="form-control" placeholder="Email Address" name="email" required data-validation-required-message="Please enter your email address.">
+            <label>User Name</label>
+            <input type="text" class="form-control" placeholder="User Name" name="username" required data-validation-required-message="Please enter your username.">
             <p class="help-block text-danger"></p>
           </div>
         </div>
