--- a/views/signup/index.handlebars
+++ b/views/signup/index.handlebars
@@ -15,7 +15,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-      <form action="/users" method="post">
+      <form action="/signup" method="post">
         <!-- <div class="row control-group">
           <div class="form-group col-xs-12 floating-label-form-group controls">
             <label>First Name</label>
