make user sessions persistent.  Change navbar when user is logged in.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,6 +23,7 @@
           <li><a href="/">Home</a></li>
           <li><a href="/users">Users</a></li>
           {{#if cur_user}}
+            {{cur_user.email}}
             <li id="logout"><a href="#">Logout</a></li>
           {{ else }}
             <li><a href="/login">Login</a></li>
