basic responsive layout

--- a/views/homepage/index.handlebars
+++ b/views/homepage/index.handlebars
@@ -1,6 +1,8 @@
 <div class="container">
   <div class="row">
-    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+    <div class="col-lg-8 panel panel-default" style="min-height: 200px;">
+      <h5>global controls</h5>
+      <br>
       <span id = "output"></span>
       <!-- <button id = "start_stop_btn" type = "button" class = "btn btn-success">Start/Stop</button> -->
       <br>
@@ -8,13 +10,50 @@
         <div id = "tempodisplay"></div>
       </div>
       <br>
+      <br>
+      <div id = "button"></div>
+    </div>
+    <div class="col-lg-4 well" style="min-height: 200px;">
+      chat area
+    </div>
+  </div>
+  
+  <div class="row">
+    <div class="col-lg-4 well" style="min-height: 437px;">
+      synth controls
+    </div>
+    <div class="col-lg-8 panel panel-default">
       <h2>Synth</h2>
       <div id = "synth"></div>
       <br>
+    </div>
+  </div>
+  
+  <div class="row">
+    <div class="col-lg-4 well" style="min-height: 261px;">
+      drum controls
+    </div>
+    <div class="col-lg-8 panel panel-default">
       <h2>Drums</h2>
-	    <div id = "drums"></div>
+      <div id = "drums"></div>
       <br>
-      <div id = "button"></div>
+    </div>
+  </div>
+  
+
+  
+  
+  
+  <div class="row">
+    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+      
+      <br>
+      
+      <br>
+      
+	    
+      <br>
+      
     </div>
   </div>
 </div>
