add step labels

--- a/views/homepage/index.handlebars
+++ b/views/homepage/index.handlebars
@@ -25,6 +25,7 @@
     <div class="col-lg-8 panel panel-default">
       <h2>Synth</h2>
       <div id = "synth"></div>
+      <span style="margin-left:14px; word-spacing:24.5px;">01 02 03 04 05 06 07 08 09 10 11 12 13 14 15 16</span>
       <br>
     </div>
   </div>
@@ -36,6 +37,7 @@
     <div class="col-lg-8 panel panel-default">
       <h2>Drums</h2>
       <div id = "drums"></div>
+      <span style="margin-left:14px; word-spacing:24.5px;">01 02 03 04 05 06 07 08 09 10 11 12 13 14 15 16</span>
       <br>
     </div>
   </div>
