--- a/views/homepage/index.handlebars
+++ b/views/homepage/index.handlebars
@@ -37,7 +37,14 @@
     <div class="col-lg-8 panel panel-default">
       <h2>Drums</h2>
       <div id = "drums"></div>
-      <span style="margin-left:14px; word-spacing:24.5px;">01 02 03 04 05 06 07 08 09 10 11 12 13 14 15 16</span>
+      <strong style="margin-left:14px; word-spacing:24.5px; ">01</strong>
+      <span style="margin-left:24.5px; word-spacing:24.5px;">02 03 04</span>
+      <strong style="margin-left:24.5px; word-spacing:24.5px; ">05</strong>
+      <span style="margin-left:24.5px; word-spacing:24.5px;">06 07 08</span>
+      <strong style="margin-left:24.5px; word-spacing:24.5px; ">09</strong>
+      <span style="margin-left:24.5px; word-spacing:24.5px;">10 11 12</span>
+      <strong style="margin-left:24.5px; word-spacing:24.5px; ">13</strong>
+      <span style="margin-left:24.5px; word-spacing:24.5px;">14 15 16</span>
       <br>
     </div>
   </div>
