change greeting message to class = navbar-text

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,7 +17,7 @@
         </button>
         <a class="navbar-brand" href="/">Musician App</a>
         {{#if cur_user}}
-          <h5>Hello {{cur_user.firstName}} </h5>
+          <p class="navbar-text">Hello {{cur_user.firstName}} </p>
         {{/if}}
       </div>
 
