Added audio context

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -43,6 +43,7 @@
   <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
   <script src="/vendor/ToneJS/Tone.min.js"></script>
   <script src="/socket.io/socket.io.js"></script>
+  <script src="/vendor/StartAudioContext.js"></script>
 
   <script type="text/javascript" src="/globalControls.js"></script>
   <script type="text/javascript" src="/drumMachine.js"></script>
