--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -45,6 +45,7 @@
   <script src="/socket.io/socket.io.js"></script>
 
   <script type="text/javascript" src="/globalControls.js"></script>
+  <script type="text/javascript" src="/saveControls.js"></script>
   <script type="text/javascript" src="/drumMachine.js"></script>
   <script type="text/javascript" src="/synth.js"></script>
 
