Created the skeleton for colab routing

--- a/views/homepage/index.handlebars
+++ b/views/homepage/index.handlebars
@@ -15,6 +15,7 @@
     </div>
     <div class="col-lg-4 well" style="min-height: 200px;">
       chat area
+      <ul id = "list"></ul>
     </div>
   </div>
 
