--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,6 +6,8 @@
   <link href="/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+  <script src="/vendor/jquery/jquery.min.js"></script>
+  
 </head>
 <body>
   <nav class="navbar navbar-default navbar-custom navbar-fixed-top">
@@ -19,6 +21,9 @@
         {{#if cur_user}}
           <div class="navbar-text">Hello </div><p class = "navbar-text" id = "username"> {{cur_user.firstName}} </i>
           </p>
+          {{# if colab_page}}
+          
+          {{/if}}
         {{/if}}
       </div>
 
@@ -43,7 +48,6 @@
   {{{ body }}}
 
   <script src="/vendor/nexus/NexusUI.js"></script>
-  <script src="/vendor/jquery/jquery.min.js"></script>
   <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
   <script src="/vendor/ToneJS/Tone.min.js"></script>
   <script src="/socket.io/socket.io.js"></script>
@@ -52,9 +56,14 @@
   <script type="text/javascript" src="/saveControls.js"></script>
   <script type="text/javascript" src="/drumMachine.js"></script>
   <script type="text/javascript" src="/synth.js"></script>
-  <script type="text/javascript" src="/chat.js"></script>
 
   {{#if cur_user}}
+    {{#if colab_page}}
+    <script type="text/javascript" src="/chat.js"></script>
+    <script type="text/javascript" src="/globalControlSocket.js"></script>
+    <script type="text/javascript" src="/socketDrums.js"></script>
+    <script type="text/javascript" src="/socketSynth.js"></script>
+    {{/if}}
   <script>
     ;(function() {
       $('#logout').click(function() {
