Working rooms commit with some major changes, don't merge without review

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -59,6 +59,12 @@
 
   {{#if cur_user}}
     {{#if colab_page}}
+    <script type="text/javascript">
+      // Declaring all variables before
+      
+      
+
+    </script>
     <script type="text/javascript" src="/chat.js"></script>
     <script type="text/javascript" src="/globalControlSocket.js"></script>
     <script type="text/javascript" src="/socketDrums.js"></script>
