Consolidated socket controls. pattern switching

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -48,6 +48,7 @@
   <script type="text/javascript" src="/saveControls.js"></script>
   <script type="text/javascript" src="/drumMachine.js"></script>
   <script type="text/javascript" src="/synth.js"></script>
+  <script type="text/javascript" src="/socketControls.js"></script>
 
   {{#if cur_user}}
   <script>
