add volume slider and echo effect to synth

--- a/views/homepage/index.handlebars
+++ b/views/homepage/index.handlebars
@@ -21,7 +21,12 @@
 
   <div class="row">
     <div class="col-lg-4 well" style="min-height: 437px;">
-      synth controls
+      <h4> synth controls </h4>
+      <div> volume </div>
+      <div id="synth-vol"></div>
+      <div> echo mix </div>
+      <div id="echo"></div>
+
     </div>
     <div class="col-lg-8 panel panel-default">
       <h2>Synth</h2>
