--- a/views/colab/index.handlebars
+++ b/views/colab/index.handlebars
@@ -3,7 +3,7 @@
     <div class="col-lg-8 panel panel-default" style="min-height: 200px;">
       <br>
       <div class = "row">
-          <div class="col-lg-6"> 
+          <div class="col-lg-6">
             <div class="input-group">
               <input type="text" id="room" class="form-control" placeholder="Enter Colab Name..." aria-label="Enter Colab Name...">
               <span class="input-group-btn">
@@ -11,7 +11,7 @@
               </span>
             </div>
           </div>
-      </div>      
+      </div>
       <span id = "output"></span>
       <!-- <button id = "start_stop_btn" type = "button" class = "btn btn-success">Start/Stop</button> -->
       <br>
@@ -31,6 +31,8 @@
   <div class="row">
     <div class="col-lg-4 well" style="min-height: 437px;">
       synth controls
+      <span> echo </span>
+      <div id="echo"></div>
     </div>
     <div class="col-lg-8 panel panel-default">
       <h2>Synth</h2>
@@ -44,7 +46,7 @@
     <div class="col-lg-4 well" style="min-height: 261px;">
       drum controls
       This is the colab page!!!!!!!
-      
+
     </div>
     <div class="col-lg-8 panel panel-default">
       <h2>Drums</h2>
@@ -74,6 +76,3 @@
     </div>
   </div>
 </div>
-
-
-
