--- a/views/colab/index.handlebars
+++ b/views/colab/index.handlebars
@@ -30,8 +30,10 @@
 
   <div class="row">
     <div class="col-lg-4 well" style="min-height: 437px;">
-      synth controls
-      <span> echo </span>
+      <h4> synth controls </h4>
+      <div> volume </div>
+      <div id="synth-vol"></div>
+      <div> echo mix </div>
       <div id="echo"></div>
     </div>
     <div class="col-lg-8 panel panel-default">
