--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,7 +20,7 @@
         <a class="navbar-brand" href="/">Musician App</a>
         {{#if cur_user}}
           <div class="navbar-text">Hello. {{cur_user.firstName}} </div>
-          <p id = "username">{{cur_user.firstName}}</p>
+          <p id = "username" style="display:none;">{{cur_user.firstName}}</p>
         {{/if}}
       </div>
 
