Changes in the chat.js

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -58,6 +58,7 @@
 
   {{#if cur_user}}
     {{#if colab_page}}
+    <script type="text/javascript" src="/mousePosition.js"></script>
     <script type="text/javascript" src="/chat.js"></script>
     <script type="text/javascript" src="/globalControlSocket.js"></script>
     <script type="text/javascript" src="/socketDrums.js"></script>
