Added a custom stepper

--- a/views/homepage/index.handlebars
+++ b/views/homepage/index.handlebars
@@ -26,10 +26,28 @@
       <div id="synth-vol"></div>
       <div> echo mix </div>
       <div id="echo"></div>
-
+      <div id="oscilloscope"></div>
     </div>
     <div class="col-lg-8 panel panel-default">
       <h2>Synth</h2>
+      <div id = "steppers">
+        <div id="SO" class="step"></div>
+        <div id="S1" class="step"></div>
+        <div id="S2" class="step"></div>
+        <div id="S3" class="step"></div>
+        <div id="S4" class="step"></div>
+        <div id="S5" class="step"></div>
+        <div id="S6" class="step"></div>
+        <div id="S7" class="step"></div>
+        <div id="S8" class="step"></div>
+        <div id="S9" class="step"></div>
+        <div id="S10" class="step"></div>
+        <div id="S11" class="step"></div>
+        <div id="S12" class="step"></div>
+        <div id="S13" class="step"></div>
+        <div id="S14" class="step"></div>
+        <div id="S15" class="step"></div>
+      </div>
       <div id = "synth"></div>
       <span style="margin-left:14px; word-spacing:24.5px;">01 02 03 04 05 06 07 08 09 10 11 12 13 14 15 16</span>
       <br>
@@ -65,6 +83,24 @@
     </div>
     <div class="col-lg-8 panel panel-default">
       <h2>Drums</h2>
+      <div id = "steppers">
+        <div id="DO" class="step"></div>
+        <div id="D1" class="step"></div>
+        <div id="D2" class="step"></div>
+        <div id="D3" class="step"></div>
+        <div id="D4" class="step"></div>
+        <div id="D5" class="step"></div>
+        <div id="D6" class="step"></div>
+        <div id="D7" class="step"></div>
+        <div id="D8" class="step"></div>
+        <div id="D9" class="step"></div>
+        <div id="D10" class="step"></div>
+        <div id="D11" class="step"></div>
+        <div id="D12" class="step"></div>
+        <div id="D13" class="step"></div>
+        <div id="D14" class="step"></div>
+        <div id="D15" class="step"></div>
+      </div>
       <div id = "drums"></div>
       <strong style="margin-left:14px; word-spacing:24.5px; ">01</strong>
       <span style="margin-left:24.5px; word-spacing:24.5px;">02 03 04</span>
