--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,22 @@
   <link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
   <script src="/vendor/jquery/jquery.min.js"></script>
-  
+  <style type="text/css">
+    #steppers{
+      width: 100%;
+      height: 10px;
+      margin-top: 3px;
+      position: relative;
+    }
+    .step {
+      width: 5.90%;
+      height: 100%;
+      position: relative;
+      float: left;
+      background-color: black;
+      opacity: 0;
+    }
+  </style>
 </head>
 <body>
   <nav class="navbar navbar-default navbar-custom navbar-fixed-top">
