--- a/views/colab/index.handlebars
+++ b/views/colab/index.handlebars
@@ -49,6 +49,8 @@
       <div id="echo"></div>
       <div> filter </div>
       <div id="synth-filter"></div>
+      <div> oscillator type </div>
+      <div id="fat-button"></div>
     </div>
     <div class="col-lg-8 panel panel-default">
       <h2>Synth</h2>
