--- a/views/homepage/index.handlebars
+++ b/views/homepage/index.handlebars
@@ -18,7 +18,7 @@
       <div id="oscilloscope"></div>
     </div>
     <div class="col-lg-4 well" style="min-height: 200px;">
-      
+
       <p id = "list"></p>
     </div>
   </div>
@@ -32,6 +32,8 @@
       <div id="echo"></div>
       <div> filter </div>
       <div id="synth-filter"></div>
+      <div> oscillator type </div>
+      <div id="fat-button"></div>
     </div>
     <div class="col-lg-8 panel panel-default">
       <h2>Synth</h2>
