fine tune volume slider.  rename id osc-button

--- a/views/colab/index.handlebars
+++ b/views/colab/index.handlebars
@@ -50,7 +50,7 @@
       <div> filter </div>
       <div id="synth-filter"></div>
       <div> oscillator type </div>
-      <div id="fat-button"></div>
+      <div id="osc-button"></div>
     </div>
     <div class="col-lg-8 panel panel-default">
       <h2>Synth</h2>
