--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,20 +1,16 @@
-body {
-  background-color: #111;
-  color: #0be;
-}
-
 #steppers{
   width: 100%;
   height: 10px;
   margin-top: 3px;
   position: relative;
 }
+
 .step {
   width: 5.90%;
   height: 100%;
   position: relative;
   float: left;
-  background-color: black;
+  background-color: white;
   opacity: 0;
 }
 
