--- a/views/colab/index.handlebars
+++ b/views/colab/index.handlebars
@@ -44,6 +44,24 @@
       <div> echo mix </div>
       <div id="echo"></div>
       <div id="oscilloscope"></div>
+      <br>
+      <input id = "patternTitle" type = "text" name = "title" placeholder = "Title"/>
+      <input id = "patternDescription" type = "text" name = "description" placeholder = "Description"/>
+      <div id = "patternSelection">
+        <input id = "pattern0" name = "pattern" type = "radio" checked/>
+
+        <input id = "pattern1" name = "pattern" type = "radio" />
+
+        <input id = "pattern2" name = "pattern" type = "radio" />
+
+        <input id = "pattern3" name = "pattern" type = "radio" />
+
+        {{#if cur_user}}
+          {{#each patterns}}
+            <input id = "patternId{{@index}}" name = "patternId" type = "hidden" value = "{{this.id}}"/>
+          {{/each}}
+        {{/if}}
+      </div>
     </div>
     <div class="col-lg-8 panel panel-default">
       <h2>Synth</h2>
@@ -74,6 +92,24 @@
   <div class="row">
     <div class="col-lg-4 well" style="min-height: 261px;">
       Drum controls
+      <br>
+      <input id = "beatTitle" type = "text" name = "title" placeholder = "Title"/>
+      <input id = "beatDescription" type = "text" name = "description" placeholder = "Description"/>
+      <div id = "beatSelection">
+        <input id = "beat0" name = "beat" type = "radio" checked/>
+
+        <input id = "beat1" name = "beat" type = "radio" />
+
+        <input id = "beat2" name = "beat" type = "radio" />
+
+        <input id = "beat3" name = "beat" type = "radio" />
+
+        {{#if cur_user }}
+          {{#each beats}}
+            <input id = "beatId{{@index}}" name = "beatId" type = "hidden" value = "{{this.id}}"/>
+          {{/each}}
+        {{/if}}
+      </div>
     </div>
     <div class="col-lg-8 panel panel-default">
       <h2>Drums</h2>
