--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -72,9 +72,12 @@
   <script src="/vendor/StartAudioContext.js"></script>
 
   <script type="text/javascript" src="/globalControls.js"></script>
-
+  
   <script type="text/javascript" src="/drumMachine.js"></script>
   <script type="text/javascript" src="/synth.js"></script>
+
+  <script type="text/javascript" src="/patternControls.js"></script>
+
   <script type="text/javascript" src="/socketControls.js"></script>
 
   {{#if cur_user}}
