--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 10px;
   margin-top: 3px;
+  
   position: relative;
 }
 
@@ -14,3 +15,15 @@
   opacity: 0;
 }
 
+#spectrogram {
+  z-index: -1;
+}
+
+#effects {
+  width:100%;
+}
+
+.drum-panel {
+
+  background-color: black; !important
+}
