--- a/views/colab/index.handlebars
+++ b/views/colab/index.handlebars
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-lg-4 panel panel-default" style="min-height: 200px;">
+    <div class="col-lg-4 panel panel-primary" style="min-height: 200px;">
       <br>
       <div class = "row">
           <div class="col-lg-12">
@@ -22,12 +22,12 @@
       <br>
       <div id = "button"></div>
     </div>
-    <div class="col-lg-4 panel panel-default" style="min-height: 200px;">
-      <h5>visualizer</h5>
+    <div class="col-lg-4 panel panel-primary drum-panel" style="min-height: 200px;">
+      <h5>Visualizer</h5>
       <div id="oscilloscope"></div>
     </div>
-    <div class="col-lg-4 well" style="min-height: 200px;">
-      <h5>chat area</h5>
+    <div class="col-lg-4 panel panel-primary" style="min-height: 200px;">
+      <h5>Chat</h5>
       <div class = "well" id = "chatbox" style = "overflow: auto; overflow-y: scroll; height: 80px;">
         <ul id = "list" style= "list-style: none; padding: 0;" ></ul>
       </div>
@@ -41,19 +41,21 @@
   </div>
 
   <div class="row">
-    <div class="col-lg-4 well" style="min-height: 437px;">
-      <h4> Synth controls </h4>
+    <div class="col-lg-4 panel panel-primary" style="min-height: 437px;">
+      <h5> Synth controls </h5>
       <div> volume </div>
       <div id="synth-vol"></div>
       <div> echo mix </div>
       <div id="echo"></div>
       <div> filter </div>
       <div id="synth-filter"></div>
+      <div> phaser </div>
+      <div id="phaser-Slider"></div>
+
       <div> oscillator type </div>
       <div id="osc-button"></div>
     </div>
-    <div class="col-lg-8 panel panel-default">
-      <h2>Synth</h2>
+    <div class="col-lg-8 panel panel-primary drum-panel" style="min-height: 437px;">
       <div id = "steppers">
         <div id="SO" class="step"></div>
         <div id="S1" class="step"></div>
@@ -73,17 +75,53 @@
         <div id="S15" class="step"></div>
       </div>
       <div id = "synth"></div>
-      <span style="margin-left:14px; word-spacing:24.5px;">01 02 03 04 05 06 07 08 09 10 11 12 13 14 15 16</span>
+      <strong style="color: white;margin-left:14px; word-spacing:24.5px; ">01</strong>
+      <span style="margin-left:24.5px; word-spacing:24.5px;">02 03 04</span>
+      <strong style="color: white; margin-left:24.5px; word-spacing:24.5px; ">05</strong>
+      <span style="margin-left:24.5px; word-spacing:24.5px;">06 07 08</span>
+      <strong style="color: white; margin-left:24.5px; word-spacing:24.5px; ">09</strong>
+      <span style="margin-left:24.5px; word-spacing:24.5px;">10 11 12</span>
+      <strong style="color: white; margin-left:24.5px; word-spacing:24.5px; ">13</strong>
+      <span style="margin-left:24.5px; word-spacing:24.5px;">14 15 16</span>
       <br>
     </div>
   </div>
 
   <div class="row">
-    <div class="col-lg-4 well" style="min-height: 261px;">
-      Drum controls
+      <div class="col-lg-4 panel panel-primary" style="min-height: 290px;">
+      <h5>Drum controls</h5>
+      <div> volume </div>
+      <div id="drum-vol"></div>
+      <div> echo mix </div>
+      <div id="echo-drums"></div>
+      <div> filter </div>
+      <div id="drums-filter"></div>
+      
+      {{#if cur_user }}
+        <br>
+        <input id = "beatTitle" type = "text" name = "title" placeholder = "Title"/>
+        <input id = "beatDescription" type = "text" name = "description" placeholder = "Description"/>
+        <div id = "beatSelection">
+          <input id = "beat0" name = "beat" type = "radio" checked/>
+
+          <input id = "beat1" name = "beat" type = "radio" />
+
+          <input id = "beat2" name = "beat" type = "radio" />
+
+          <input id = "beat3" name = "beat" type = "radio" />
+
+          {{#each beats}}
+            <input id = "beatId{{@index}}" name = "beatId" type = "hidden" value = "{{this.id}}"/>
+          {{/each}}
+        </div>
+
+        <div id = "save"></div>
+
+      {{else}}
+
+      {{/if}}
     </div>
-    <div class="col-lg-8 panel panel-default">
-      <h2>Drums</h2>
+    <div class="col-lg-8 panel panel-primary drum-panel" style="min-height: 290px;">
       <div id = "steppers">
         <div id="DO" class="step"></div>
         <div id="D1" class="step"></div>
@@ -103,28 +141,14 @@
         <div id="D15" class="step"></div>
       </div>
       <div id = "drums"></div>
-      <strong style="margin-left:14px; word-spacing:24.5px; ">01</strong>
+      <strong style="color: white;margin-left:14px; word-spacing:24.5px; ">01</strong>
       <span style="margin-left:24.5px; word-spacing:24.5px;">02 03 04</span>
-      <strong style="margin-left:24.5px; word-spacing:24.5px; ">05</strong>
+      <strong style="color: white; margin-left:24.5px; word-spacing:24.5px; ">05</strong>
       <span style="margin-left:24.5px; word-spacing:24.5px;">06 07 08</span>
-      <strong style="margin-left:24.5px; word-spacing:24.5px; ">09</strong>
+      <strong style="color: white; margin-left:24.5px; word-spacing:24.5px; ">09</strong>
       <span style="margin-left:24.5px; word-spacing:24.5px;">10 11 12</span>
-      <strong style="margin-left:24.5px; word-spacing:24.5px; ">13</strong>
+      <strong style="color: white; margin-left:24.5px; word-spacing:24.5px; ">13</strong>
       <span style="margin-left:24.5px; word-spacing:24.5px;">14 15 16</span>
       <br>
     </div>
-  </div>
-
-  <div class="row">
-    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-
-      <br>
-
-      <br>
-
-
-      <br>
-
-    </div>
-  </div>
 </div>
